--- a/css/styles.css
+++ b/css/styles.css
@@ -1,156 +1,161 @@
 :root {
+  --primary-text-color: #212121;
   --secondary-text-color: #757575;
   --secondary-bg-color: #f5f4fa;
-  --primary-text-color: #212121;
+  --design-bg-color: #2f303a;
   --accent-color: #2196f3;
-  --white-text-or-bg-color: #ffffff;
+  --wite-bg-color: #ffffff;
+  --white-text-color: #ffffff;
+  --low-opacity-text: rgba(255, 255, 255, 0.6);
 }
 
 body {
-  background-color: var(--white-text-or-bg-color);
+  background-color: var(--white-bg-color);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
 }
 
-/* all pages nav */
-.logo {
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+/* ----------------ALL PAGES---------------- */
+
+/* ----------------NAV---------------- */
+.site-logo {
+  color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-size: 26px;
-  text-decoration: none;
   font-weight: 700;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
-.logo .first-half {
-  color: var(--accent-color);
-}
-
-.logo .second-half {
+.logo-second-half {
   color: var(--primary-text-color);
 }
 
-.site-nav .link,
-.site-nav .list {
+.site-nav-link {
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  list-style-type: none;
-  text-decoration: none;
+  letter-spacing: 0.02em;
 }
 
-.site-nav .link.current,
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav-link.current,
+.site-nav-link:hover,
+.site-nav-link:focus {
   color: var(--accent-color);
 }
 
-.contacts .link,
-.contacts .list {
+.contacts-link {
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  list-style-type: none;
-  text-decoration: none;
+  letter-spacing: 0.02em;
 }
-.contacts .link:hover,
-.contacts .link:focus {
+.contacts-link:hover,
+.contacts-link:focus {
   color: var(--accent-color);
 }
 
-/* all pages footer */
-.page-footer {
-  background-color: #2F303A;
+/* ----------------FOOTER---------------- */
+.footer {
+  background-color: var(--design-bg-color);
 }
 
-.logo .white-half {
-  color: var(--white-text-or-bg-color);
+.white-half-logo {
+  color: var(--white-text-color);
 }
 
-.address .list,
-.address .link {
-  list-style: none;
-  text-decoration: none;
+.footer-link-location {
+  color: var(--white-text-color);
   font-style: normal;
-  color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
 
-.address .location {
-  color: var(--white-text-or-bg-color);
+.footer-link {
+  color: var(--low-opacity-text);
+  font-style: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
 
+/* ----------------"Студия" page CSS---------------- */
 
-
-
-
-
-
-
-/* "Студия" page CSS */
-
-/* hero section */
-
+/* ----------------HERO SECTION---------------- */
 .hero-section {
   background-color: #2f303a;
 }
 
-.hero-section .title {
-  color: var(--white-text-or-bg-color);
+.hero-title {
+  color: var(--white-text-color);
   text-transform: uppercase;
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.4;
+  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
 }
 
-.hero-section .button {
+.hero-button {
   background-color: var(--accent-color);
-  color: var(--white-text-or-bg-color);
+  color: var(--white-text-color);
   border-radius: 4px;
-  border: none;
+  border: 1px solid #000000;
   cursor: pointer;
   font-size: 16px;
   font-weight: 700;
-  line-height: 1.8;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
 }
 
-.hero-section .button:hover,
-.hero-section .button:focus {
-  background-color: #188CE8;
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #188ce8;
 }
 
-
-/* advantages section */
-
-.advantages-list {
-  list-style-type: none;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-}
-
-.advantages-list .title {
+/* ----------------ADVANTAGES---------------- */
+.advantages-title {
   color: var(--primary-text-color);
+  font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
 }
 
-.advantages-list .info {
+.advantages-description {
+  font-size: 14px;
   line-height: 1.7;
+  letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
-
-/* "what we do" list */
-
-.we-do .title {
+/* ----------------WHAT CAN WE MAKE---------------- */
+.we-make-title {
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -159,90 +164,70 @@ body {
   letter-spacing: 0.03em;
 }
 
-.we-do .list {
-  list-style-type: none;
+/* ----------------TEAM---------------- */
+.team-section {
+  background-color: var(--secondary-bg-color);
 }
 
-/* team section */
+.team-title {
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
 
-.team {
-  background-color: var(--secondary-bg-color);
+.team-title-member {
+  color: var(--primary-text-color);
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
 }
 
-.team .list {
-  list-style-type: none;
+.team-description {
+  color: var(--secondary-text-color);
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
 }
 
-.team .title {
-  color: var(--primary-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-}
+/* ----------------"Портфолио" page CSS---------------- */
 
-.team .member {
+/* ----------------FILTER NAVIGATION---------------- */
+.filter-nav-buttons {
+  background-color: var(--secondary-bg-color);
   color: var(--primary-text-color);
   font-weight: 500;
-}
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
 
-.team .position {
-  color: var(--secondary-text-color);
-}
-
-
-
-
-
-
-
-/* "Портфолио" page CSS */
-
-/* projects-nav */
-
-.filter-nav .buttons {
-  background-color: var(--secondary-bg-color)
-  color: var(--primary-text-color);
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.6;
 }
 
-.filter-nav .buttons:hover,
-.filter-nav .buttons:focus {
+.filter-nav-buttons:hover,
+.filter-nav-buttons:focus {
   background-color: var(--accent-color);
-  color: var(--white-text-or-bg-color);
+  color: var(--white-text-color);
 }
 
-.filter-nav .filter-names {
-  list-style-type: none;
-}
+/* ----------------PROJECTS---------------- */
 
-/* projects list */
-
-.projects .title {
+.projects-title {
   color: var(--primary-text-color);
   font-weight: 700;
   size: 18px;
   line-height: 2;
+  letter-spacing: 0.06em;
 }
 
-.projects .project-name {
+.projects-description {
   color: var(--secondary-text-color);
   font-size: 16px;
-  line-height: 1.8;
-}
-
-.projects .list {
-  list-style-type: none;
-}
-
-.projects .project-link {
-  text-decoration: none;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
 }
